# binary-reader.rs

./: .all-contributorsrc  .travis.disabled.yml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  coverage.yml  dependabot-auto-merge.yml  release.yml
examples/: README.md  example.rs  file.rs
src/: lib.rs  tests.rs
