[package]
name = "binary-reader"
version = "0.4.4"
authors = ["MPThLee <mpthlee@gmail.com>"]
publish = true

description = "A binary reader for rust-lang. for step by step. It's a minimal `byteorder` wrapper for read bytes."
readme = "README.md"
license = "MIT"
repository = "https://github.com/MPThLee/binary-reader.rs"
keywords = ["binary", "reader", "byteorder"]

# Rust version.
edition="2018"

# Abort instead of panic, Since it doesn't need panic in this library.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
byteorder = "^1.4"

[dev-dependencies]
pretty_assertions = "^1.1.0"